DECA-333 : Added restart and download icons when PDF export is completed. Also fixed an issue where the button text alignment didn't look right.

--- a/core/styles/css/decapod.css
+++ b/core/styles/css/decapod.css
@@ -186,6 +186,11 @@ ul.ds-shared-titleBar-flatList {
 	box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
+/* Status Messages */
+.ds-shared-status-description {
+    margin: 10px 0 10px 0;
+}
+
 /**
  UI COMPONENTS
  */
